<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="account_type">com.hitvardhan.project_app.login</string>
    <string name="app_name"><b>PROJECT APP</b></string>
    <string name="app_package">com.hitvardhan.project_app</string>
    <string name="welcome">Welcome %s</string>
    <string name="logout_button">Logout</string>
    <string name="fetch_contacts_button">Fetch Contacts</string>
    <string name="fetch_accounts_button">Fetch Accounts</string>
    <string name="clear_button">Clear</string>
    <string name="user_id">User ID</string>
    <string name="name_of_user">Name</string>
    <string name="Email">Email</string>
    <string name="welcome_string">WELCOME</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_network_title">No Network</string>
    <string name="no_network_desc">Seems like your device is offline</string>
    <string name="yes_response">OK</string>
    <string name="suspendedConnection">Connection Denied</string>
    <string name="connectionSuspension">Connection temporarily suspended!</string>
    <string name="are_you_sure_question">Are you sure?</string>
    <string name="Logout_text">Want to Logout?</string>
    <string name="logout">LOGOUT</string>
    <string name="deny">CANCEL</string>
    <string name="online">You are Online</string>
    <string name="action">Action</string>
    <string name="taskList">TaskList</string>
    <string name="todays_task_title">Today\'s Task</string>
    <string name="pending_task_title">Pending Task</string>
    <string name="Future_task_title">Future Task</string>
    <string name="task_location">" Task's Location"</string>
    <string name="descOfTask">Descp_of_task</string>
    <string name="dueDate">due_date</string>
    <string name="addressOfTask">addressOfTask</string>
    <string name="contactInfoOftask">PhoneNumber</string>
    <string name="statusOfTask">statusOfTask</string>
    <string name="taskID">taskID</string>
    <string name="taskType">taskType</string>
    <string name="nameOfTask">NAME_OF_USER</string>
    <string name="completed">Completed</string>
    <string name="updatedTitle">Already Updated!</string>
    <string name="statusField">Status__c</string>
    <string name="updateTitle">UPDATE</string>
    <string name="updateMessage">"CHANGE STATUS TO COMPLETED OF \n TASK: "</string>
    <string name="update">UPDATE</string>
    <string name="no_response">CANCEL</string>
    <string name="no_tasks_for_future">No Tasks for future!</string>
    <string name="no_tasks_for_today">No Tasks for today</string>
    <string name="setDate">Please set the date!</string>
    <string name="adminUserId">005280000067vlGAAQ</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Task Name(Required)</string>
    <string name="hint_date">Enter Due Date(dd-mm-yyyy)</string>
    <string name="hint_email">Email(Required)</string>
    <string name="hint_description">Description</string>
    <string name="hint_address">Address(Required)</string>
    <string name="hint_phone">Phone Number</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your Task name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_address">Enter the address</string>
</resources>
